# walker

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  discrete_distribution.cpp  mt19937.cpp  random_choice.cpp  tower_sampling.cpp  uniform_real.cpp
cmake/: catch2.cmake
example/: CMakeLists.txt  discrete_distribution.cpp  random_choice.cpp  tower_sampling.cpp
walker/: random_choice.hpp  tower_sampling.hpp
